k8s/longhorn-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingressauth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-auth
