k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepi-service
  namespace: default
spec:
  type: ExternalName
  externalName: homepi.bergmann.click
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: proxy-ingress-tls
      hosts:
        - unifi.bergmann.click
        - hass.bergmann.click
  rules:
  - host: unifi.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: homepi-service
              port:
                number: 8443
  - host: hass.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: homepi-service
              port:
                number: 8123
