k8s/test-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: whoami-app
spec:
   replicas: 1
   selector:
      matchLabels:
         app: whoami-app
   template:
      metadata:
         labels:
            app: whoami-app
      spec:
         containers:
            - name: whoami-app
              image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
   name: whoami-app
   labels:
      app: whoami-app
spec:
   ports:
      - port: 80
        name: whoami-app
   selector:
      app: whoami-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
  name: whoami-ingress
spec:
  spec:
  rules:
  - host: k8s.bergmann.click
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-app
          servicePort: 80
  tls:
  - hosts:
    - k8s.bergmann.click
    secretName: whoami-cert
